T7/Z6/.gcc.out
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp: In function ‘void SortirajListu(std::__cxx11::list<Tip>&)’:
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:19:33: error: qualified-id in declaration before ‘it2’
   auto std::list<Tip>::iterator it2=it1;
                                 ^~~
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:20:33: error: qualified-id in declaration before ‘mini’
   auto std::list<Tip>::iterator mini=it1;
                                 ^~~~
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:22:9: error: ‘it2’ was not declared in this scope
   while(it2!=lista.end()){
         ^~~
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:22:9: note: suggested alternative: ‘it1’
   while(it2!=lista.end()){
         ^~~
         it1
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:23:13: error: ‘mini’ was not declared in this scope
    if(*it2<*mini){
             ^~~~
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:23:13: note: suggested alternative: ‘uint’
    if(*it2<*mini){
             ^~~~
             uint
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:30:9: error: ‘mini’ was not declared in this scope
   *it1=*mini;
         ^~~~
/rhome/a/akovacevic4/workspace/TP/T7/Z6/main.cpp:30:9: note: suggested alternative: ‘uint’
   *it1=*mini;
         ^~~~
         uint
